--- a/djangomart/dashboard/templates/dashboard/index.html
+++ b/djangomart/dashboard/templates/dashboard/index.html
@@ -23,7 +23,11 @@
 
                         <div class="p-6 bg-white rounded-b-xl">
                             <h2 class="text-2xl">{{item.name}}</h2>
-                            <p class="text-gray-500">Price: {{item.price}}</p>
+                            {% if item.is_sold %}
+                                <p class="text-gray-500">Sold Out</p>
+                            {% else %}
+                                <p class="text-gray-500">Price: {{item.price}}</p>
+                            {% endif %}
                         </div>
                     </a>
                 </div>
