--- a/djangomart/item/templates/item/detail.html
+++ b/djangomart/item/templates/item/detail.html
@@ -17,6 +17,9 @@
         <div class="col-span-2 p-6 bg-gray-100 rounded-xl">
             <h1 class="mb-6 text-3xl">{{item.name}}</h1>
             <p class="text-gray-500"><strong>Price: </strong> {{item.price}}</p>
+            {% if item.is_sold %}
+                <p class="text-gray-500"><strong>Sold Out</strong></p>
+            {% endif %}
             <p class="text-gray-500"><strong>Seller: </strong> {{item.created_by.username}}</p>
 
             {% if item.description %}
@@ -29,8 +32,9 @@
                 <div class="mt-6 p-6 bg-white rounded-xl">
                     <p>This item was created by you</p>
 
-                    <div class="w-full flex justify-end">
-                        <a href="{% url "item:delete" item.id %}" class="inline-block mt-6 px-6 py-3 text-lg font-semibold bg-red-500 text-white rounded-xl self-end">Delete</a>
+                    <div class="w-full flex justify-end gap-4">
+                        <a href="{% url "item:edit" item.id %}" class="inline-block mt-6 px-6 py-3 text-lg font-semibold bg-gray-500 hover:bg-gray-700 text-white rounded-xl self-end">Edit</a>
+                        <a href="{% url "item:delete" item.id %}" class="inline-block mt-6 px-6 py-3 text-lg font-semibold bg-red-500 hover:bg-red-700 text-white rounded-xl self-end">Delete</a>
                     </div>
                 </div>
             {% else %}
