--- a/djangomart/core/templates/core/index.html
+++ b/djangomart/core/templates/core/index.html
@@ -37,12 +37,12 @@
 
         <div class="grid grid-cols-3 gap-3">
 
-            {% for category in categories %}
+            {% for category in category_data %}
                 <div>
                     <a href="#">
                         <div class="p-6 bg-white rounded-xl">
                             <h2 class="text-2xl">{{category.name}}</h2>
-                            <p class="text-gray-500">{{category.items.count}} item{% if category.items.count != 1 %}s{% endif %}</p>
+                            <p class="text-gray-500">{{category.for_sale_count}} item{% if category.for_sale_count != 1 %}s{% endif %} for sale</p>
                         </div>
                     </a>
                 </div>
