Linked categories on index with browse

--- a/djangomart/core/templates/core/index.html
+++ b/djangomart/core/templates/core/index.html
@@ -39,7 +39,7 @@
 
             {% for category in category_data %}
                 <div>
-                    <a href="#">
+                    <a href="{% url "item:items" %}?category={{category.id}}">
                         <div class="p-6 bg-white rounded-xl">
                             <h2 class="text-2xl">{{category.name}}</h2>
                             <p class="text-gray-500">{{category.for_sale_count}} item{% if category.for_sale_count != 1 %}s{% endif %} for sale</p>
